force-app/main/default/objects/MonthlyEstimation__c/MonthlyEstimation__c.object-meta.xml
<CustomObject>
    <description>PMS MonthlyEstimation</description>
    <label>MonthlyEstimation</label>
    <nameField>
        <displayFormat>ME-{0000000}</displayFormat>
        <label>MonthlyEstimation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>