force-app/main/default/objects/MonthlyEstimation__c/fields/ActualMM__c.field-meta.xml
<CustomField>
    <fullName>ActualMM__c</fullName>
    <label>ActualMM</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>