force-app/main/default/objects/MonthlyEstimation__c/fields/AllocationExternalKey__c.field-meta.xml
<CustomField>
    <fullName>AllocationExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>AllocationExternalKey</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>