force-app/main/default/objects/MonthlyEstimation__c/fields/ContractMM__c.field-meta.xml
<CustomField>
    <fullName>ContractMM__c</fullName>
    <label>ContractMM</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>