force-app/main/default/objects/MonthlyEstimation__c/fields/Fm_Weight__c.field-meta.xml
<CustomField>
    <fullName>Fm_Weight__c</fullName>
    <formula>IF(
TEXT(ProjectMember__r.Opportunity__r.StageName) = &quot;Closed Won&quot;,
1,
CASE(
ProjectMember__r.Opportunity__r.Probability__c,
&quot;상&quot;, 0.75,
&quot;중&quot;, 0.5,
&quot;하&quot;, 0.25,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fm_Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>