force-app/main/default/objects/MonthlyEstimation__c/fields/Fm_WeightedActualMM__c.field-meta.xml
<CustomField>
    <fullName>Fm_WeightedActualMM__c</fullName>
    <formula>ActualMM__c * Fm_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fm_WeightedActualMM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>