force-app/main/default/objects/MonthlyEstimation__c/fields/Fm_WeightedContractMM__c.field-meta.xml
<CustomField>
    <fullName>Fm_WeightedContractMM__c</fullName>
    <formula>ContractMM__c * Fm_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fm_WeightedContractMM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>