force-app/main/default/objects/MonthlyEstimation__c/fields/ProjectMember__c.field-meta.xml
<CustomField>
    <fullName>ProjectMember__c</fullName>
    <label>ProjectMember</label>
    <referenceTo>ProjectMember__c</referenceTo>
    <relationshipLabel>MonthlyEstimation</relationshipLabel>
    <relationshipName>MonthlyEstimationList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>